--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "source": "index.html",
   "scripts": {
-    "sass:watch": "sass --style=compressed --watch styles:dist"
+    "sass:watch": "sass --style=compressed --watch styles:dist",
+    "parcel:watch": "parcel serve --dist-dir public",
+    "parcel:build": "parcel build --dist-dir build --public-url ./"
   },
   "repository": {
     "type": "git",
@@ -19,5 +21,8 @@
   "dependencies": {
     "parcel": "^2.13.3",
     "sass": "^1.85.1"
+  },
+  "devDependencies": {
+    "svgo": "^3.3.2"
   }
 }
