--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,17 +20,28 @@ jobs:
       - name: Install dependencies
         run: npm install
         
+      - name: Update CSS path in HTML
+        run: |
+          echo "Текущее содержимое (до замены):"
+          grep -o "href=\"[^\"]*index.css\"" index.html
+          sed -i 's|\./dist/index.css|\./styles/index.css|g' index.html
+          echo "После замены:"
+          grep -o "href=\"[^\"]*index.css\"" index.html
+          
+      - name: Verify HTML file
+        run: |
+          echo "Проверка содержимого HTML файла после замены:"
+          cat index.html | grep -A 1 -B 1 stylesheet
+          
       - name: Build project
         run: npm run build
         
-      - name: Update CSS path in HTML
+      - name: Final Verification
         run: |
-          echo "Текущее содержимое index.html:"
-          cat index.html
-          echo "Заменяем путь к CSS файлу..."
-          sed -i 's|./dist/index.css|./styles/index.css|g' index.html
-          echo "Новое содержимое index.html:"
-          cat index.html
+          echo "Финальная проверка HTML файла:"
+          cat index.html | grep -A 1 -B 1 stylesheet
+          echo "Проверка наличия CSS файла:"
+          ls -la styles/
         
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
